# django-shop

./: .env.sample  Dockerfile  LICENSE  Makefile  docker-compose.yml  pyproject.toml
commands/: clean-all-data.sh  create-admin.sh  migrate-django.sh  rebuild-indexes.sh  rebuild-pgviews.sh  run-django-dev.sh  seed-all-data.sh
configs/postgresql/: postgresql.conf
src/apps/api/rest/: apps.py  (+7 more)
src/apps/cart/: context_processors.py  cookies.py  exceptions.py  loader.py  middleware.py  mixins.py  models.py  query_fields.py  resolver.py  types.py  urls.py  views.py
src/apps/catalog/: admin.py  apps.py  choices.py  context_processors.py  forms.py  mixins.py  models.py  paginator.py  pgviews.py  urls.py  views.py
src/apps/favorites/: context_processors.py  mixins.py  models.py  urls.py  views.py
src/apps/inventories/: apps.py  models.py
src/apps/ratings/: apps.py  models.py  signals.py  urls.py  views.py
src/core/: asgi.py  settings.py  urls.py  wsgi.py
src/etl/: cleaner.py  dto.py  extract_transform.py  load.py
src/fixtures/: db_tuning.py  signal_manager.py  utils.py
src/fixtures/cleaners/: ratings.py  users.py
src/fixtures/factories/: ratings.py  users.py
src/fixtures/generators/: cart.py  favorites.py  inventories.py  ratings.py  users.py
src/templates/components/: cart_button.html  favorite_button.html  footer.html  header.html  likes_dislikes.html  messages.html  pagination.html  product_price.html  rating_stars.html
src/templates/layout/: base.html  form_field_errors.html  form_non_field_errors.html  menu.html
src/templates/pages/: home.html
(+159 files in other folders)
